# magento-crawler

./: .env  .gitignore  Cargo.toml  README.md  dist-workspace.toml
.dashboard/: .gitignore  README.md  docker-compose.yml
.dashboard/docker/clickhouse/init/: 001-init.sql
.dashboard/docker/grafana/provisioning/dashboards/json/: magento-crawler-analytics.json
.dashboard/docker/grafana/provisioning/datasources/: clickhouse.yml
.github/workflows/: general.yml  release.yml
src/: app.rs  clickhouse_client.rs  configuration.rs  crawler.rs  csv_writer.rs  email_sender.rs  file_manager.rs  lib.rs  main.rs  reqwest_client.rs  telemetry.rs
