[package]
name = "magento_crawler"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "magento_crawler"

[dependencies]
tokio = { version = "1.47.1", features = ["time", "rt", "rt-multi-thread", "macros"] }
reqwest = "0.12.22"
log = "0.4.27"
dotenv = "0.14.1"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
clickhouse = { version = "0.13.3", features = ["chrono"] }
chrono = { version = "0.4.41", default-features = false }
serde_json = "1.0.48"
clap = { version = "4.5.41", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
config = "0.15.19"
serde-aux = "4.7.0"
dirs = "6.0.0"
